--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ body {
   flex: 1;
   border-radius: inherit;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: column;
   align-items: center;
   padding: 2rem 1.5rem;
